# MacWifi

./: .gitignore  CMakeLists.txt  Comms.cpp  Comms.h  MacWifi.cpp  MacWifi.h  MacWifi.sln  MacWifi.vcxproj  MacWifiLib.cpp  MacWifiLib.h  MacWifiTest.cpp  MacWifiTest.r  Network.h  Prefs.cpp  Prefs.h  README.md  Util.cpp  Util.h  Wifi.cpp  Wifi.h  WifiEvents.h  WifiShared.h  resources.r  sysmenu.c  sysmenu.cpp  sysmenu.h
Modules/: OpenWRT.cpp  OpenWRT.h  VM300.cpp  VM300.h  WifiModule.cpp  WifiModule.h
x64/Debug/: MacWifi.vcxprojResolveAssemblyReference.cache
